			       =================
				BOGOFILTER NEWS
			       =================

NOTE: More information on important changes for bogofilter updaters
is in the RELEASE.NOTES files.  Read them!!

RELEASE.NOTES-0.93 has two important sections entitled:

        MAJOR CHANGES IN BOGOFILTER 0.93 
and     INCOMPATIBLE CHANGES IN BOGOFILTER 0.93

0.93.0	2004-10-??

	2004-10-28

	* Merged Transactional branch (for BerkeleyDB) back into the trunk.

	2004-10-25

	* Added GETTING.STARTED document.

	* Changed default mode from two-state to three-state
	  - with ham_cutoff=0.45 and spam_cutoff=0.99
            The ham_cutoff value is new and spam_cutoff is unchanged.
	  - changed the "Yes/No" tags used in the "X-Bogosity:" line
	    to "Spam/Ham/Unsure"

0.92.8	2004-10-19
	2004-10-25 - Promoted to Stable Release

	* Bogotune now warns when using '-E' to suppress ESF checking
          and non 1.0 esf values are read from the config file.

	* bogofilter will now properly exit with code 3 when encountering write
	  errors in pass-through mode. It would use the wrong code, 2, since
	  the introduction of the "unsure" exit code.

	* Properly flush existing data before changing I/O buffer size. Fixes
	  t.bogodir failure seen, for instance, on Solaris, particularly with
	  -D and redirected output.

	2004-10-15

	* Limit bogotune's scanning to rx values between 0.4 and 0.6.

	2004-10-13

	* Ignore 'X-Bogosity' lines in mime attachments.

	2004-10-12

	* Revise lexer variables for flex-2.5.31 compatibility.

	2004-10-10

	* OS/2 compatibility fixes for configure, bogofilter, and
          bogoutil (thanks to Yuri Dario).

	2004-10-09

	* Fix a potential crash on malformatted input (writing a NUL byte to
	  the wrong place) in the RFC-2047 decoder. Reported by Clint Adams.

0.92.7	2004-10-02

	* '-M' allows processing 1 msg-count file with multiple
	  messages.  Otherwise allow multiple msg-count files with 1
	  message in each.

	2004-09-30
